<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Passel</string>
    <string name="action_settings">Settings</string>
    <string name="splash_login">Log In</string>
    <string name="splash_sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="log_in_username">Username</string>
    <string name="log_in_password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="title_activity_map_event">Current Event</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="preference_file_key">com.passel.PREFERENCE_FILE_KEY</string>

    <string name="locationpicker_button_search">Search</string>
    <string name="locationpicker_button_query">Choose</string>
    <string name="locationpicker_button_zoom_in">+</string>
    <string name="locationpicker_button_zoom_out">-</string>
    <string name="recipient_hint">Phone or Email</string>
    <string name="amount_hint">Amount</string>
    <string name="note_hint">Note</string>
    <string name="pay_title">Pay</string>
    <string name="charge_title">Charge</string>


</resources>
