<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".VenmoTestActivity">

    <AutoCompleteTextView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/recipient"
        android:hint="@string/recipient_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <EditText
        android:layout_below="@id/recipient"
        android:layout_alignParentLeft="true"
        android:id="@+id/amount"
        android:hint="@string/amount_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <EditText
        android:layout_below="@id/amount"
        android:layout_alignParentLeft="true"
        android:id="@+id/note"
        android:hint="@string/note_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <Button
        android:layout_below="@id/note"
        android:layout_alignParentLeft="true"
        android:id="@+id/pay"
        android:hint="@string/pay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_below="@id/note"
        android:layout_toRightOf="@id/pay"
        android:id="@+id/charge"
        android:hint="@string/charge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
