<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.passel.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#000000"
        android:text="@string/splash_sign_up"
        android:id="@+id/signUpText"
        android:layout_marginTop="53dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/sign_up_confirm_password"
        android:hint="@string/sign_up_confirm_password"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/sign_up_password"
        android:layout_alignLeft="@+id/sign_up_password"
        android:layout_alignStart="@+id/sign_up_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/sign_up_password"
        android:hint="@string/sign_up_password"
        android:layout_below="@+id/sign_up_username"
        android:layout_alignLeft="@+id/sign_up_username"
        android:layout_alignStart="@+id/sign_up_username"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/sign_up_username"
        android:layout_below="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/sign_up_username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_sign_up"
        android:id="@+id/sign_up_button"
        android:layout_below="@+id/sign_up_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
