<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.passel.LogInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/primary_text_default_material_light"
        android:text="@string/splash_login"
        android:id="@+id/logInText"
        android:layout_marginTop="53dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/log_in_password"
        android:hint="@string/log_in_password"
        android:layout_below="@+id/log_in_username"
        android:layout_alignLeft="@+id/log_in_username"
        android:layout_alignStart="@+id/log_in_username"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/log_in_username"
        android:layout_below="@+id/logInText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/log_in_username"
        android:backgroundTint="@color/dark_primary_color" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_login"
        android:id="@+id/log_in_button"
        android:layout_below="@+id/log_in_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp" />

</RelativeLayout>
